--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scroll": "^1.8.9"
   }
 }
